# abvx-agent-skills

./: ATTRIBUTION.md  CATALOG.md  README.md  pyproject.toml
.abvx/: skillspector-baseline.json  skillspector-policy.yaml
.github/ISSUE_TEMPLATE/: skill-autopsy.yml  skill-request.yml
.github/workflows/: publish.yml  regenerate-catalog-consolidation-once.yml  regenerate-catalog-once.yml  regenerate-doc2lora-catalog-once.yml  regenerate-security-router-catalog-once.yml  security-audit.yml  update-catalog-once.yml  validate.yml
benchmarks/: README.md  frontend-taste-layer-pilot.md
benchmarks/skill-evolution/: activation-cases.jsonl  manifest.json  rejected-edits.md  skill-health.md  source-registry.md
catalog/okf/: .abvx-okf-manifest.json  index.md
docs/: abvx-skillpack-profile.md  catalog.json  index.html  loopops-guide.md  skill-evolution-roadmap.md  solo-dev-quickstart.md  team-rollout-playbook.md
docs/demos/: diagnose.md  minimal-diff-builder.md  token-economy.md
docs/outreach/: first-wave-submissions.md  submission-kit.md  targets.md
scripts/: evaluate_skillspector.py  generate_catalog.py  validate.py
skills/agent-friction-ledger/: SKILL.md  SKILL_CARD.md
skills/agent-learning-layer-triage/: SKILL.md  SKILL_CARD.md
skills/agent-operations-contract/: SKILL.md  SKILL_CARD.md
skills/agent-tool-contract-review/: SKILL.md  SKILL_CARD.md
skills/agents-best-practices/: SKILL.md  SKILL_CARD.md
skills/anti-slop-review/: SKILL.md  (+1 more)
tests/: test_anti_slop_review_contract.py  test_bug_evidence_protocol.py  test_evaluate_skillspector.py  test_export_okf.py  test_frontend_taste_layer_contract.py  test_loop_hardening_contract.py
(+339 files in other folders)
